--- a/hpscheck/README.adoc
+++ b/hpscheck/README.adoc
@@ -73,11 +73,13 @@ input number :
 
 쉘을 실행하게되면, 데이터베이스명, 소유자, 패스워드, 파일 write 여부 체크 순으로 입력하게 됩니다.
 
-정확하게 순서대로 입력하게 되면 체크 할 수 있는 컨텐츠들이 보이며, input number 부분에 항목의 숫자를 입력하고 엔터를 누르면 해당 항목의 내용이 보여지게 됩니다.
+정확하게 순서대로 입력하게 되면 체크 할 수 있는 컨텐츠들이 보이며, input number 부분에 항목의 숫자를 입력하고 엔터를 누르면 해당 항목의 내용이 보여지게 됩니다. 항목은 case 문으로 구현되었습니다.
 
 항목 들어갈 때마다 화면 클리어링을 시작함과 동시에 파일 write 여부 설정한 것에 따라 파일을 생성하거나 결과만 출력하게 되며, 항목 내 세부 내용은 엔터를 눌러야 다음 내용을 볼 수 있습니다.
 
-한 항목의 내용을 다 보게되면 컨텐츠 내용이 다시 나오게되는 무한 루프식으로 되어있으며, 내용을 다 체크했다면 \q 입력으로 쉘을 빠져 나올 수 있습니다.(강제종료도 가능합니다.)
+파일은 각 항목 맨 처음에 해당 항목의 파일을 지우는 것으로 시작합니다(항목 다시 시작으로 인해 복잡한 append를 피하기 위함). ">" 명령어를 통해 각 항목의 맨 처음 내용을 기록하며 항목이 끝날 때까지 이어진 내용은 ">>" 명령어를 통해 append 되도록 구현했습니다.
+
+한 항목의 내용을 다 보게되면 컨텐츠 내용이 다시 나오게되는 무한 루프식으로 되어있으며, 내용을 다 체크했다면 "\q" 입력으로 쉘을 빠져 나올 수 있습니다(강제종료도 가능합니다).
 
 파일 저장을 활성화 했다면 chkreslt 디렉토리 내에 데이터베이스명 하위 디렉토리가 생성되며, 아래에 본 항목이 항목명.txt 파일 형태로 생성되어있습니다. 
 
@@ -87,9 +89,25 @@ input number :
 
 === 2.1. 스크립트 실행시 나오는 항목
 
-- 
+- Input Database Name +
+점검하고자하는 database 명을 넣으며, 입력 값을 dbcheck.sql에 인자값으로 전달하여 database명이 틀릴 경우 다시 입력하라는 메시지를 띄우며 정확하게 작성 될 때까지 무한 반복됩니다.
+
+
+- Input Owner Name +
+점검하고자 하는 소유자 명을 넣으며, 입력 값을 usercheck.sql에 인자값으로 전달하여 소유자명이 틀릴 경우 다시 입력하라는 메시지를 띄우며 정확하게 작성 될 때까지 무한 반복됩니다.
+
+
+- Input Owner Password +
+소유자의 패스워드를 넣으며, 해당 패스워드로 접속을 해서 select version() 쿼리를 실행합니다. 결과값이 나오면 패스워드 입력이 성공, 안나오면 틀리다고 판정하여 패스워드가 틀릴 경우 다시 입력하라는 메시지를 띄우며 정확하게 작성 될 때까지 무한 반복됩니다.
+
+- Write Result Files? (y/n) input : +
+파일을 chkreslt 폴더 내에 위 database name에서 입력한 db명으로 하위디렉토리 생성하여 작성할지 안할지를 y또는 n을 입력해서 flag 값을 y또는 n으로 설정합니다. flag 값은 아래 항목에서 파일을 쓸 때, 안쓸 때 구분하기 위한 용도로 사용됩니다.
+
+전부 입력하게 되면 현재 DB, 소유자, 파일 write mode 여부와 함께 점검 항목을 보여줍니다.
 
 === 2.2. Version Check
+
+
 
 === 2.3. Database & Owner Check
 
