--- a/hpscheck/README.adoc
+++ b/hpscheck/README.adoc
@@ -5,7 +5,7 @@
 == 1. HpsCheck 개요
 
 HpsCheck는 HyperSQL PS팀이 PostgreSQL 기술지원 시 고객 지원에 필요한 컨텐츠를 담아놓은 쉘 스크립트입니다. 
-PS 팀 누구나 참여하여 더 좋은 컨텐츠를 담을 수 있게 끔 2번 항목에 내용을 정리하니, 참고하셔서 내용 수정 및 더 좋은 아이디어/컨텐츠 공유 부탁드립니다.
+PS 팀 누구나 참여하여 더 좋은 컨텐츠를 담을 수 있게 끔 아래 항목에 내용을 정리하니, 참고하셔서 내용 수정 및 더 좋은 아이디어/컨텐츠 공유 부탁드립니다.
 
 현재는 아래와 같이 구성되어 있습니다.
 
