--- a/backup/README.adoc
+++ b/backup/README.adoc
@@ -104,6 +104,15 @@ Standby node에서 백업을 수행 받도록 지정합니다.
 ** 로그 파일을 저장할 위치입니다.
 ** 백업 스크립트 실행 유저의 읽기 쓰기 실행 권한이 모두 필요합니다.
 
+* BAK_CHECK_PROGRESS_ENABLE
+** 백업 진행 상황을 BAK_CHECK_PROGRESS_TIME 주기로 출력합니다.
+** Y로 설정 시 백업 진행 상황이 출력됩니다.
+** 진행 상황 확인을 위해 PostgreSQL에 커넥션 되므로 max_conn에 주의합니다.
+
+* BAK_CHECK_PROGRESS_TIME
+** 백업 진행 상황을 확인 및 출력할 주기를 설정합니다.
+** 단위는 초 입니다.
+
 === Backup Scheduling
 백업 수행 주기를 설정합니다. + 
 OS의 Crontab을 사용합니다.
@@ -160,4 +169,6 @@ gzip을 사용하여 압축합니다.
 백업 파일을 이용하여 복원 시 권한을 0700 또는 0750으로 변경해야 합니다.
 
 === 테이블스페이스 사용
-데이터베이스에 존재하는 모든 테이블스페이스는 백업 디렉토리에 재구성 됩니다.
+데이터베이스에 존재하는 모든 테이블스페이스는 백업 디렉토리에 재맵핑 됩니다. + 
+
+
