README.adoc  기능 변경 내용 반영
README.adoc  기능 변경 내용 반영

-- 내용 추가
CON_DATABASE
CON_RETRY_ROLE
BAK_DAY_OF_MONTH
BAK_DAY_OF_WEEK
BAK_TIME_HOUR
BAK_TIME_MINUTE
BAK_REMOVE_ARCHIVE
BAK_ARCHIVE_DIR

-- 내용 변경
주의 사항에 피지풀 관련 내용 추가

--- a/backup/README.adoc
+++ b/backup/README.adoc
@@ -70,11 +70,16 @@ Standby node에서 백업을 수행 받도록 지정합니다.
 
 * CON_USER
 ** pg_basebackup 및 커넥션 확인에 사용할 유저입니다.
+** 백업에 필요한 데이터베이스 정보 수집 과정 및 백업 수행에 필요 합니다.
 ** 슈퍼유저 사용을 권고합니다.
 
 * CON_PORT
 ** 데이터베이스 연결에 사용할 포트를 지정합니다.
 ** pgpool 사용 시에도 pgpool 포트가 아닌, Database 포트를 사용해야 합니다.
+
+* CON_DATABASE
+** 연결할 데이터베이스를 지정합니다.
+** 백업에 필요한 데이터베이스 정보 수집 과정에 필요 합니다.
 
 * CON_RETRY_COUNT
 ** 데이터베이스 연결을 확인할 최대 횟수를 지정합니다.
@@ -128,8 +133,35 @@ OS의 Crontab을 사용합니다.
 |1| 매일 오전 12시 0분에 백업을 수행합니다.
 |2| 매 주 일요일 오전 12시 0분에 백업을 수행합니다.
 |3| 매 달 1일 오전 12시 0분에 백업을 수행합니다.
+|4| 사용자 정의 타입입니다.
 |===
 
+백업 수행 주기를 4번 사용자 정의 타입으로 설정할 경우, 아래의 파라미터를 사용합니다. + 
+OS 크론탭 설정 방식과 동일합니다. + 
+
+crontab *BAK_TIME_MINUTE BAK_TIME_HOUR BAK_DAY_OF_MONTH * BAK_DAY_OF_WEEK*
+
+* BAK_DAY_OF_MONTH
+** 백업을 수행할 날짜를 지정합니다. 
+** 여러 날짜를 지정할 경우 소괄호 및 콤마를 사용합니다.
+** 매일 수행할 경우 *으로 지정합니다.
+** Ex) 매 월 10, 20일에 수행하고 싶을 경우 (10,20)
+
+* BAK_DAY_OF_WEEK
+** 백업을 수행할 요일을 지정합니다. 
+** 월요일 1일 ~ 일요일 7일
+** 여러 날짜를 지정할 경우 소괄호 및 콤마를 사용합니다.
+** 매일 수행할 경우 *으로 지정합니다.
+** Ex) 매 주 월, 수, 금요일에 하고싶을 경우 (1,3,5)
+
+* BAK_TIME_HOUR
+** 백업을 수행할 시간을 지정합니다. 
+** 24시간 체계를 사용합니다.
+** Ex) 오후 3시에 수행하고 싶을 경우 15
+
+* BAK_TIME_MINUTE
+** 백업을 수행할 시간의 분 단위를 지정합니다.
+** Ex) 정각에 수행하고 싶을 경우 0
 
 === Compression Settings
 백업 파일을 압축할 수 있습니다. + 
@@ -162,6 +194,17 @@ gzip을 사용하여 압축합니다.
 *** 예시 32k 500M
 ** 사용하지 않으려면 config 파일의 MAX_RATE를 주석처리 합니다.
 
+=== Archive Cleanup Settins
+백업 수행 완료시 백업 시점 이전의 아카이브를 삭제할 수 있습니다.
+
+* BAK_REMOVE_ARCHIVE
+** Y 설정 시 백업 수행이 성공하면, 필요하지 않은 아카이브 파일이 정리됩니다.
+** N 설정 시 백업 수행 성공 여부에 관계 없이, 오래된 아카이브 파일을 유지합니다.
+
+* BAK_ARCHIVE_DIR
+** 아카이브 디렉토리를 지정합니다.
+** 절대 경로를 사용해야 합니다.
+
 == 주의사항
 
 === 백업 파일 권한 관리
@@ -170,5 +213,9 @@ gzip을 사용하여 압축합니다.
 
 === 테이블스페이스 사용
 데이터베이스에 존재하는 모든 테이블스페이스는 백업 디렉토리에 재맵핑 됩니다. + 
+
+=== 피지풀 사용
+피지풀을 통한 백업은 프로토콜 불일치로 수행이 불가능 합니다. +
+따라서, 백업 수행 대상 노드의 피지풀 포트가 아닌 데이터베이스 포트를 사용해야 합니다.
 
 
